# hubquest_taxi

./: .gitignore  README.md  config.yaml  main.py  pyproject.toml  setup.py  utils.py
data/interim/: train_data_clean.parquet
data/processed/: test_data_proc.parquet
data/raw/: test_data.parquet  train_data.parquet
notebooks/: 1.0-ia-initial-eda.ipynb  TAXI-16 model.ipynb  template_sklearn_custom_transformer.py  train_test_split.ipynb
src/data/: data_clean.py  data_split.py  make_dataset.py
src/features/: build_features.py  cluster_features.py  dtype_converter.py  geo_features.py  time_features.py  trip_distance.py
src/models/: model_utils.py  predict_model.py  train_model.py
