[tool.poetry]
name = "hubquest-taxi"
version = "0.1.0"
description = ""
authors = ["Dawid Kowalczyk <dawid.kowalczyk@iff.com>"]
readme = "README.md"
packages = [{include = "hubquest_taxi"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
